--- a/_posts/2015-06-21-0.md
+++ b/_posts/2015-06-21-0.md
@@ -1,5 +1,6 @@
 ---
-title: ((void *)0)
+title: 0
+categories: meta
 ---
 
 Hi, I'm Alex and I'll be writing about stuff I'm interested in. Right now that includes algorithm design, cryptography, infosec, and data mining, but that may change in the future.
