Fix IP article title

--- a/_posts/2017-10-08-ip.md
+++ b/_posts/2017-10-08-ip.md
@@ -1,6 +1,6 @@
 ---
-title: Internet 101: IP
-categories: networking, protocols
+title: "Internet 101: IP"
+categories: networking protocols
 ---
 
 The Internet Protocol is responsible for moving data across network boundaries. How does it do this?
