Fix preface link in CIDR post

--- a/_posts/2017-10-09-cidr.md
+++ b/_posts/2017-10-09-cidr.md
@@ -3,7 +3,7 @@ title: "Internet 101: CIDR"
 categories: networking
 ---
 
-<p class="preface">This article assumes the reader has basic knowledge of [IP]({{ site.url }}{% post_url 2017-10-08-ip %}).</p>
+<p class="preface">This article assumes the reader has basic knowledge of <a href="{{ site.url }}{% post_url 2017-10-08-ip %}">IP</a>.</p>
 
 IP defines the IP address, and the packets that are sent across networks. However, it doesn't state how the packets are routed. What happens when a packet arrives at a router? The only information the router has is the destination address. If it isn't directly connected to the machine hosting this address, how will it know where to send the packet?
 
