Fix up last two psots

--- a/_posts/2017-10-08-ip.md
+++ b/_posts/2017-10-08-ip.md
@@ -32,3 +32,6 @@ IP is a best effort service. Each packet is considered independently. Packets ma
 For this reason, other protocols such as TCP are built on top of IP to provide reliability and/or other services. This separation is advantageous for machines that forward packets, such as routers. Routers do not need to keep state in relation to the packets that they forward, nor do they need to know anything about the upper layer protocols that use IP (in practice, this is not always true).
 
 [1] *Internet Protocol*. RFC 791, 1981. [https://tools.ietf.org/html/rfc791](https://tools.ietf.org/html/rfc791)
+
+[2] *Internet Protocol, Version 6 (IPv6) Specification*. RFC 8200, 2017. [https://tools.ietf.org/html/rfc8200](https://tools.ietf.org/html/rfc8200)
+
