Edit a bunch of articles

--- a/_posts/2017-10-08-ip.md
+++ b/_posts/2017-10-08-ip.md
@@ -15,7 +15,7 @@ On the public internet, these addresses are managed by the IANA and five regiona
 
 ### Packets
 
-When routing data across networks, each node must be aware of the destination address along with some other useful metadata. This leads to the definition of a packet. A packet encapsulates a segment of data by adding an IP header.
+When routing data across networks, each node must be aware of the destination address along with some other useful metadata. This leads to the definition of an IP packet. A packet encapsulates a segment of data by adding an IP header.
 
 This header contains the source and destination address, in addition to a number of other fields such as the IP protocol version, the transport layer protocol, and packet length. It also contains an eight bit TTL, or hop limit. This value is decremented at each node, and the packet is discarded when it reaches zero. This ensures that packets do not circle around the internet forever.
 
@@ -29,7 +29,7 @@ This begs the question of how an individual node routes packets. If it does not 
 
 IP is a best effort service. Each packet is considered independently. Packets may be duplicated, dropped silently, corrupted during transmission or delivered out of sequence, and IP does not provide any mechanisms to augment this. There is no notion of a connection.
 
-For this reason, other protocols such as TCP are built on top of IP to provide reliability and/or other services. This separation is advantageous for machines that forward packets, such as routers. Routers do not need to keep state in relation to the packets that they forward, nor do they need to know anything about the upper layer protocols that use IP (in practice, this is not always true).
+For this reason, other protocols such as TCP are built on top of IP to provide reliability and/or other services. This separation is advantageous for machines that forward packets, such as routers. Routers do not need to keep state in relation to the packets that they forward, nor do they need to know anything about the upper layer protocols that depend on IP (in practice, this is not always true).
 
 [1] *Internet Protocol*. RFC 791, 1981. [https://tools.ietf.org/html/rfc791](https://tools.ietf.org/html/rfc791)
 
