--- a/_posts/2017-10-09-cidr.md
+++ b/_posts/2017-10-09-cidr.md
@@ -7,9 +7,9 @@ categories: networking
 
 IP defines the IP address, and the packets that are sent across networks. However, it doesn't state how the packets are routed. What happens when a packet arrives at a router? The only information the router has is the destination address. If it isn't directly connected to the machine hosting this address, how will it know where to send the packet?
 
-The answer to this question is complex, but it begins with Classless Inter-Domain Routing. CIDR is the modern way of allocating IP addresses. CIDR splits an IP address into two contiguous groups of bits. The most significant group is called the network prefix, while the other identifies the host. In CIDR notation, this is expressed using a slash and a number, which specifies the number of bits in the network mask.
+The answer to this question is complex, but it begins with Classless Inter-Domain Routing. CIDR is the modern way of allocating IP addresses. An IP address is split into two contiguous groups of bits. The most significant group is called the network prefix, while the other identifies the host. In CIDR notation, this is expressed using a slash and a number, which specifies the number of bits in the network mask.
 
-For example, 192.168.1.0/24 represents a contiguous block of IPv4 addresses, from 192.168.1.0 to 192.168.1.255. Suppose all these addresses live on one network, serviced by router A. Router B connects to A, and knows that A services this block. It therefore needs only one entry in its routing table---a mapping from 192.168.1.0/24 to A. This entry will match all packets destined for a host on A's local network. Essentially, CIDR allows for fine-grained aggregation of routing prefixes.
+For example, 192.168.1.0/24 represents a contiguous block of IPv4 addresses from 192.168.1.0 to 192.168.1.255. Suppose all these addresses live on one network, serviced by router A. Router B connects to A, and knows that A services this block. It therefore needs only one entry in its routing table---a mapping from 192.168.1.0/24 to A. This entry will match all packets destined for a host on A's local network. Essentially, CIDR allows for fine-grained aggregation of routing prefixes.
 
 IP addresses are allocated according to this method. The IANA allocates a short prefix to a regional internet registry, which then allocates slightly longer prefixes to local internet registries. These then allocate still longer prefixes to ISPs and large companies, and so on. As long as IP addresses are allocated roughly in accordance to the geographic topology of the internet, this greatly reduces the size of routing tables. In practice, however, this is not enforced.
 
