publish uid post

--- a/_posts/2018-03-17-uid.md
+++ b/_posts/2018-03-17-uid.md
@@ -30,6 +30,6 @@ When a process is created, it inherits the real and effective uids of its parent
 
 It turns out file permissions are also involved. In addition to the familiar read, write and executable bits for owner, group, and others, there are several special modes. One of these is the setuid bit. If this bit is set, executing the file will result in a process with the effective uid of the owner of the file. This is the `s` instead of the `x` in the example above.
 
-When the user executes the binary above, a process is created with the uid of the user, but the euid of root (or 0). The process then sets its own uid to that of its euid (root). It then spawns a shell, which inherits the uid and euid of the process (both root)---i.e. a privileged shell.
+When the user executes the binary above, a process is created with the uid of the user, but the euid of root (or 0). The process then sets its own uid to that of its euid (root). It then spawns a shell, which inherits the uid and euid of the process---i.e. a privileged shell.
 
-So why, then, is the call to `setreuid` even necessary? In theory it shouldn't be, and there are probably some shells for which it isn't. But for security reasons, bash explicitly checks for the setuid case and uses its root powers to drop privileges. In other words, it will drop its effective uid down to its real uid, making the call to `setreuid` a necessity.
+So why, then, is the call to `setreuid` even necessary? In theory it shouldn't be, and there probably exist shells for which it isn't. But for security reasons, bash explicitly checks for the setuid case and uses its root powers to drop privileges. In other words, it will drop its effective uid down to its real uid, making the call to `setreuid` a necessity.
