Change uid post wording.

--- a/_posts/2018-03-17-uid.md
+++ b/_posts/2018-03-17-uid.md
@@ -16,7 +16,7 @@ setreuid(geteuid(), geteuid());
 system("/bin/sh");
 ```
 
-You'd expect a privileged shell to open, and that's what happens. But exactly why does that happen?
+Let's find out. First, we need to understand what a uid is.
 
 The POSIX standard defines three different user identifiers. These allow processes to dynamically take on different roles, providing they have the required privileges.
 
@@ -24,7 +24,7 @@ The POSIX standard defines three different user identifiers. These allow process
 2. The **effective uid** of a process is used for access control. It is also used as the owner for files created by that process. See `geteuid(void)` and `seteuid(uid_t euid)` (note that confusingly, `setuid` also sets the effective uid).
 3. The **saved uid** is used to store the effective user id when it is changed temporarily. For example, a privileged process may need do some unprivileged work. To do this, it would change its euid. But it would not be able to change back unless its original (privileged) euid was stored somewhere. That's where the saved uid comes in: an unprivileged process may set its euid exclusively to one of uid, suid, or euid.
 
-Processes are managed by the kernel using a process descriptor. In practice, this is a `task_struct` [struct](https://github.com/torvalds/linux/blob/8f5fd927c3a7576d57248a2d7a0861c3f2795973/include/linux/sched.h#L524), containing all the process information that the kernel needs. This includes a pointer to a `cred` [struct](https://github.com/torvalds/linux/blob/8f5fd927c3a7576d57248a2d7a0861c3f2795973/include/linux/cred.h#L111) struct, which stores the different uids mentioned above. This is how the kernel determines whether or not a process has the privileges to do something.
+Processes are managed by the kernel using a process descriptor. In practice, this is a `task_struct` [struct](https://github.com/torvalds/linux/blob/8f5fd927c3a7576d57248a2d7a0861c3f2795973/include/linux/sched.h#L524), containing all the process information that the kernel needs. This includes a pointer to a `cred` [struct](https://github.com/torvalds/linux/blob/8f5fd927c3a7576d57248a2d7a0861c3f2795973/include/linux/cred.h#L111), which stores the different uids mentioned above. This is how the kernel determines whether or not a process has the privileges to do something.
 
 When a process is created, it inherits the real and effective uids of its parent. So when a user runs a binary, the resulting process will typically have the uid and euid of the user. If that were all that was at play, the above example would simply open a shell as the user. So what gives?
 
