Fixed some typos.

--- a/_posts/2017-09-29-hashwalk.md
+++ b/_posts/2017-09-29-hashwalk.md
@@ -9,7 +9,7 @@ A good, general purpose cryptographic hash function should exhibit the avalanche
 
 In an effort to test this, I'll apply local search to the hashing function. I'll start with a target hash value, $$H(m)$$. The actual value of isn't particularly important. I'll define the optimization problem as finding an input whose hash minimizes the hamming distance to $$H(m)$$. The idea is that if there is any discernible pattern in the hashed values with respect to incremental changes to the input, then a local search heuristic should find better solutions than simply randomly hashing values.
 
-I'll try my luck on an older, broken hashing algorithm: md5. Md5 has been considered broken for well over a decade, although you can probably still find it in the wild today. Interestingly, it is only broken in terms of collision resistance. A practical preimage attack isn't puclically known (although there is at least one theoretical attack). So if my primitive cryptanalysis works, I'll be famous.
+I'll try my luck on an older, broken hashing algorithm: md5. Md5 has been considered broken for well over a decade, although you can probably still find it in the wild today. Interestingly, it is only broken in terms of collision resistance. A practical preimage attack isn't publically known (although there is at least one theoretical attack). So if my primitive cryptanalysis works, I'll be famous.
 
 ### Hiker
 
