Typos in hashwalk.

--- a/_posts/2017-09-29-hashwalk.md
+++ b/_posts/2017-09-29-hashwalk.md
@@ -29,11 +29,11 @@ I'll try a real local search.
 
 [Simulated annealing](https://github.com/avanpo/hashwalk/blob/master/hashwalk/local_search.py#L68) is a simple but effective kind of local search. It permits all neighboring solutions that score better than the current solution, but rejects poorer solutions with a probability that decreases with time. Typically, this decrease is exponential -- somewhat similar to how a hot object cools, hence the name. This helps prevent the heuristic from getting stuck in local minima prematurely, and helps it find (or at least get close to) the global minima.
 
-If the md5 hash space has any local neighborhoods (in the sense that similar inputs produce similar hashes), then the algorithm should spend more time traversing good solutions -- e.g. lower hamming distances. In that case, the distribution should shift left. I'll run it for a similar amount of time as Hiker.
+If the md5 hash space has any local neighborhoods (in the sense that similar inputs produce similar hashes), then the algorithm should spend more time traversing good solutions -- i.e. lower hamming distances. In that case, the distribution should shift left. I'll run it for a similar amount of time as Hiker.
 
 ![Simulated annealing results]({{ site.url }}/assets/sa-results.svg)
 
-Hmmm. No such luck. Simulated annealing has approximately 25% overhead compared to hiker, which isn't bad. The best solution found was again 35 bits away from the target.
+Hmmm. No such luck. My implementation of simulated annealing has approximately 25% overhead compared to hiker, which isn't bad. The best solution found was again 35 bits away from the target.
 
 ### Genetic algorithm
 
